--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -23,7 +23,7 @@
           <select id='{{ rw }}_select_teams' multiple class='mt-1 form-control'>
             {% for team in myTeamsArr %}
               <option value='team:{{ team.id }}'
-              {{ Entity.entityData.canread|extractJson('teams') == 'nope' ? ' selected' }}
+              {{ Entity.entityData.canread|isInJsonArray('teams', team.id) ? ' selected' }}
               >{{ 'Team'|trans }} - {{ team.name }}</option>
             {% endfor %}
           </select>
@@ -31,15 +31,15 @@
           <select id='{{ rw }}_select_teamgroups' multiple class='form-control'>
             {% for tg in myTeamgroupsArr %}
               <option value='teamgroup:{{ tg.id }}'
-              {{ Entity.entityData.canread|extractJson('teamgroups') == 'nope' ? ' selected' }}
-              >{{ 'Teamgroup'|trans }} - {{ tg.name }}</option>
+              {{ Entity.entityData.canread|isInJsonArray('teamgroups', tg.id) == ('teamgroup:' ~ tg.id) ? ' selected' }}
+                      >{{ 'Teamgroup'|trans }} - {{ tg.name }}</option>
             {% endfor %}
           </select>
           <label for='{{ rw }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <select id='{{ rw }}_select_users' multiple class='form-control'>
             {% for user in usersArr %}
               <option value='user:{{ user.userid }}'
-              {{ Entity.entityData.canread|extractJson('users') == 'nope' ? ' selected' }}
+              {{ Entity.entityData.canread|isInJsonArray('users', user.userid) ? ' selected' }}
               >{{ 'User'|trans }} - {{ user.fullname }} ({{ user.email }})</option>
             {% endfor %}
           </select>
