--- a/src/templates/show-templates-edit.html
+++ b/src/templates/show-templates-edit.html
@@ -45,14 +45,14 @@
       </h2>
     </div>
     <!-- CANREAD -->
-    <div class='col-md-3'>
+    <div id='canreadDiv' class='col-md-3'>
       <h5 class='d-inline'><i class='fas fa-fw fa-eye' title='{{ 'Visibility'|trans }}'></i>{{ 'Visibility'|trans }}</h5>
       <button class='button-small btn btn-primary' data-action='toggle-modal' data-target='permModal-canread'>edit</button>
       {% set can = Entity.getCan(Entity.entityData.canread) %}
       {% include('view-permissions.html') %}
     </div>
     <!-- CANWRITE -->
-    <div class='col-md-3'>
+    <div id='canwriteDiv' class='col-md-3'>
       <h5 class='d-inline'><i class='fas fa-fw fa-pencil-alt' title='{{ 'Can write'|trans }}'></i>{{ 'Can write'|trans }}</h5>
       <button class='button-small btn btn-primary' data-action='toggle-modal' data-target='permModal-canwrite'>edit</button>
       {% set can = Entity.getCan(Entity.entityData.canwrite) %}
