--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -19,6 +19,7 @@
               >{{ value|trans }}</option>
             {% endfor %}
           </select>
+          <!-- TEAMS -->
           <label for='{{ rw }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <select id='{{ rw }}_select_teams' multiple class='mt-1 form-control'>
             {% for team in myTeamsArr %}
@@ -27,6 +28,7 @@
               >{{ 'Team'|trans }} - {{ team.name }}</option>
             {% endfor %}
           </select>
+          <!-- TEAMGROUPS -->
           <label for='{{ rw }}_select_teamgroups'>{{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <select id='{{ rw }}_select_teamgroups' multiple class='form-control'>
             {% for tg in myTeamgroupsArr %}
@@ -35,14 +37,22 @@
                       >{{ 'Teamgroup'|trans }} - {{ tg.name }}</option>
             {% endfor %}
           </select>
-          <label for='{{ rw }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
-          <select id='{{ rw }}_select_users' multiple class='form-control'>
-            {% for user in usersArr %}
-              <option value='user:{{ user.userid }}'
-              {{ Entity.entityData.canread|isInJsonArray('users', user.userid) ? ' selected' }}
-              >{{ 'User'|trans }} - {{ user.fullname }} ({{ user.email }})</option>
+          <!-- USERS -->
+          <label for='{{ rw }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.' }}</p>
+          <ul class='list-group' id='{{ rw }}_list_users'>
+            {% for user in Entity.getCan(Entity.entityData[rw]).users %}
+              <li class='list-group-item w-100' data-id='{{ user.userid }}'>
+                <i class='fas fa-{{ rw == 'canread' ? 'eye' : 'pencil-alt' }}'></i> {{ user.fullname }} ({{ user.email }}) <span data-action='remove-parent' class='hover-danger'><i class='fas fa-xmark'></i></span>
+              </li>
             {% endfor %}
-          </select>
+          </ul>
+          <!-- add user to permissions input -->
+          <div class='autocompleteUsersDiv input-group mt-1'>
+            <input id='{{ rw }}_select_users' class='form-control mt-1 autocompleteUsers autocompleteUsersPermissions' placeholder='{{ 'Add user'|trans }}' autocomplete='off'>
+            <div class='input-group-append'>
+              <button class='btn button-small btn-primary' data-rw='{{ rw }}' data-action='add-user-to-permissions'>{{ 'Add'|trans }}</button>
+            </div>
+          </div>
         </div>
       </div>
       <div class='modal-footer'>
