hide body in view/edit mode if set in metadata via {"eLabFTW_hide_body": true} in show mode load/show metadata instead of body

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -174,9 +174,10 @@
 
   <!-- BODY -->
   {% if editor == 'md' %}
-  <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'>{{ Entity.entityData.body }}</textarea>
+  <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'{{ hideBody == true ? ' style="display:none;"' : ''}}>{{ Entity.entityData.body }}</textarea>
   {% else %}
-  <div><!-- << this div is added around the textarea to fix an issue on mobile editor. See #3107 -->
+  {# hide body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
+  <div{{ hideBody == true ? ' style="display:none;"' : ''}}>{# << this div is added around the textarea to fix an issue on mobile editor. See #3107 #}
     <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='mceditable invisible' name='body' rows='15' cols='80'>{{ Entity.entityData.body }}</textarea>
   </div>
   {% endif %}
