--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -125,11 +125,11 @@
     <div class='d-flex align-items-start justify-content-around col-md-6'>
       <!-- CAN READ -->
       {% set rw = 'canread' %}
-      {% set can = Entity.getCan(Entity.entityData.canread) %}
+      {% set can = Entity.entityData.canread|canToHuman %}
       {% include('view-permissions.html') %}
       <!-- CAN WRITE -->
       {% set rw = 'canwrite' %}
-      {% set can = Entity.getCan(Entity.entityData.canwrite) %}
+      {% set can = Entity.entityData.canwrite|canToHuman %}
       {% include('view-permissions.html') %}
     </div>
   </div>
