--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -168,14 +168,14 @@
     <div class=''>
       <!-- CAN READ -->
       {% set rw = 'canread' %}
-      {% set can = Entity.getCan(Entity.entityData.canread) %}
+      {% set can = Entity.entityData.canread|canToHuman %}
       {% include('view-permissions.html') %}
     </div>
 
     <div class=''>
       <!-- CAN WRITE -->
       {% set rw = 'canwrite' %}
-      {% set can = Entity.getCan(Entity.entityData.canwrite) %}
+      {% set can = Entity.entityData.canwrite|canToHuman %}
       {% include('view-permissions.html') %}
     </div>
 
