improve the smallgray class and permissions display

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -43,21 +43,21 @@
       <option value='1'{{ teamConfigArr.deletable_xp ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
       <option value='0'{{ not teamConfigArr.deletable_xp ? " selected='selected'" }}>{{ 'No'|trans }}</option>
     </select>
-    <span class='smallgray'>{{ 'An admin account will always be able to delete experiments.'|trans }}</span>
+    <p class='smallgray'>{{ 'An admin account will always be able to delete experiments.'|trans }}</p>
 
     <label for='deletable_item'>{{ 'Users can delete items:'|trans }}</label>
     <select class='form-control col-md-4' name='deletable_item' id='deletable_item'>
       <option value='1'{{ teamConfigArr.deletable_item ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
       <option value='0'{{ not teamConfigArr.deletable_item ? " selected='selected'" }}>{{ 'No'|trans }}</option>
     </select>
-    <span class='smallgray'>{{ 'An admin account will always be able to delete items.'|trans }}</span>
+    <p class='smallgray'>{{ 'An admin account will always be able to delete items.'|trans }}</p>
 
     <label for='user_create_tag'>{{ 'Users can create tags:'|trans }}</label>
     <select class='form-control col-md-4' name='user_create_tag' id='user_create_tag'>
       <option value='1'{{ teamConfigArr.user_create_tag ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
       <option value='0'{{ not teamConfigArr.user_create_tag ? " selected='selected'" }}>{{ 'No'|trans }}</option>
     </select>
-    <span class='smallgray'>{{ 'An admin account will always be able to create tags.'|trans }}</span>
+    <p class='smallgray'>{{ 'An admin account will always be able to create tags.'|trans }}</p>
 
     <label for='force_exp_tpl'>{{ 'Force experiment template use:'|trans }}</label>
     <select class='form-control col-md-4' name='force_exp_tpl' id='force_exp_tpl'>
@@ -82,7 +82,7 @@
       <option value='1'{{ teamConfigArr.do_force_canread ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
       <option value='0'{{ not teamConfigArr.do_force_canread ? " selected='selected'" }}>{{ 'No'|trans }}</option>
     </select>
-    <span class='smallgray'>{{ 'Select if you want to enforce read permissions on experiments'|trans }}</span>
+    <p class='smallgray'>{{ 'Select if you want to enforce read permissions on experiments'|trans }}</p>
 
     <label for='force_canread'>{{ 'Enforced read permissions on experiments'|trans }}</label>
     <select class='form-control col-md-4' name='force_canread' id='force_canread'>
@@ -91,14 +91,14 @@
       <option value='team'{{ teamConfigArr.force_canread == 'team' ? " selected='selected'" }}>{{ 'Team'|trans }}</option>
       <option value='user'{{ teamConfigArr.force_canread == 'user' ? " selected='selected'" }}>{{ 'User'|trans }}</option>
     </select>
-    <span class='smallgray'>{{ 'Enforce the read permission for all experiments of users in this team.'|trans }}</span>
+    <p class='smallgray'>{{ 'Enforce the read permission for all experiments of users in this team.'|trans }}</p>
 
     <label for='do_force_canwrite'>{{ 'Enforce write permissions?'|trans }}</label>
     <select class='form-control col-md-4' name='do_force_canwrite' id='do_force_canwrite'>
       <option value='1'{{ teamConfigArr.do_force_canwrite ? " selected='selected'" }}>{{ 'Yes'|trans }}</option>
       <option value='0'{{ not teamConfigArr.do_force_canwrite ? " selected='selected'" }}>{{ 'No'|trans }}</option>
     </select>
-    <span class='smallgray'>{{ 'Select if you want to enforce write permissions on experiments'|trans }}</span>
+    <p class='smallgray'>{{ 'Select if you want to enforce write permissions on experiments'|trans }}</p>
 
     <label for='force_canwrite'>{{ 'Enforced write permissions on experiments'|trans }}</label>
     <select class='form-control col-md-4' name='force_canwrite' id='force_canwrite'>
@@ -107,19 +107,19 @@
       <option value='team'{{ teamConfigArr.force_canwrite == 'team' ? " selected='selected'" }}>{{ 'Team'|trans }}</option>
       <option value='user'{{ teamConfigArr.force_canwrite == 'user' ? " selected='selected'" }}>{{ 'User'|trans }}</option>
     </select>
-    <span class='smallgray'>{{ 'Enforce the write permission for all experiments of users in this team.'|trans }}</span>
+    <p class='smallgray'>{{ 'Enforce the write permission for all experiments of users in this team.'|trans }}</p>
 
     <br>
     <label for="common_template">{{ 'Common Experiment Template'|trans }}</label>
     <textarea style='height:400px' class='mceditable' name="common_template" id='common_template'>
         {{ teamConfigArr.common_template|raw }}
     </textarea>
-    <span class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</span>
+    <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
 
     <br>
     <label for="common_template_md">{{ 'Common Experiment Template'|trans }} (Markdown)</label>
     <textarea style='height:400px' class='markdown-textarea' name="common_template_md" id='common_template_md'>{{ teamConfigArr.common_template_md|raw }}</textarea>
-    <span class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</span>
+    <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
 
     <div class='mt-4 text-center'>
       <button data-action='patch-team-admin' data-id='{{ teamConfigArr.id }}' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
