--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -12,6 +12,7 @@
       <div class='modal-body'>
         <div data-rw={{ rw }}>
           <label for='{{ rw }}_select_base'>{{ 'Base'|trans }}</label>
+          <p class='smallgray'>{{ 'This setting sets a baseline upon which you can add more permissions by selecting teams, teamgroups or users below.'|trans }}</p>
           <select id='{{ rw }}_select_base' class='form-control'>
             {% for key, value in visibilityArr %}
               <option value='{{ key }}'
@@ -21,7 +22,8 @@
           </select>
           <!-- TEAMS -->
           <label for='{{ rw }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
-          <select id='{{ rw }}_select_teams' multiple class='mt-1 form-control' autocomplete='off'>
+          <p class='smallgray'>{{ 'Selecting a team here will give access to all members of this team.'|trans }}</p>
+          <select id='{{ rw }}_select_teams' multiple class='form-control' autocomplete='off'>
             {% for team in myTeamsArr %}
               <option value='team:{{ team.id }}'
               {{ Entity.entityData.canread|isInJsonArray('teams', team.id) ? ' selected' }}
@@ -30,6 +32,7 @@
           </select>
           <!-- TEAMGROUPS -->
           <label for='{{ rw }}_select_teamgroups'>{{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
+          <p class='smallgray'>{{ 'Selecting a teamgroup here will give access to all users part of this teamgroup.'|trans }}</p>
           <select id='{{ rw }}_select_teamgroups' multiple class='form-control' autocomplete='off'>
             {% for tg in myTeamgroupsArr %}
               <option value='teamgroup:{{ tg.id }}'
