--- a/src/templates/view-permissions.html
+++ b/src/templates/view-permissions.html
@@ -1,7 +1,6 @@
 {# required vars: rw, can: coming from canread or canwrite with canToHuman filter #}
 {% include('permissions-edit-modal.html') %}
-{# the line-height is important here because of the inheritance of .item #}
-<div id='{{ rw }}Div' style='line-height: 100% !important' class='mr-2'>
+<div id='{{ rw }}Div' style='line-height: 90%' class='mr-2'>
   <h5 class='d-inline'><i class='fas fa-fw fa-{{ rw == 'canread' ? 'eye' : 'pencil-alt' }}' title='{{ rw == 'canread' ? 'Visibility'|trans : 'Can write'|trans }}'></i>{{ rw == 'canread' ? 'Visibility'|trans : 'Can write'|trans }}</h5>
   {% if not Entity.isReadOnly %}
     <button class='button-small btn btn-primary align-top' data-action='toggle-modal' data-target='permModal-{{ rw }}'>{{ 'edit'|trans }}</button>
