--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -176,8 +176,8 @@
   {% if editor == 'md' %}
   <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'{{ hideBody == true ? ' style="display:none;"' : ''}}>{{ Entity.entityData.body }}</textarea>
   {% else %}
-  {# hide body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
-  <div{{ hideBody == true ? ' style="display:none;"' : ''}}>{# << this div is added around the textarea to fix an issue on mobile editor. See #3107 #}
+  {# do not display body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
+  <div{{ displayMainText == false ? ' style="display:none;"' : ''}}>{# << this div is added around the textarea to fix an issue on mobile editor. See #3107 #}
     <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='mceditable invisible' name='body' rows='15' cols='80'>{{ Entity.entityData.body }}</textarea>
   </div>
   {% endif %}
