--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -297,6 +297,7 @@
         <textarea class='mceditable' id='itemsTypesBody'>{{ Entity.entityData.body }}</textarea>
       </div>
 
+      <div id='metadataDiv' class='col-md-6'></div>
       {% set mode = 'edit-template' %}
       {% include 'steps-links-edit.html' %}
       <!-- METADATA editor for items types -->
