--- a/src/templates/templates-edit.html
+++ b/src/templates/templates-edit.html
@@ -38,6 +38,8 @@
 <div class='text-center mt-4'>
   <button data-action='update-template' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
 </div>
+
+<div id='metadataDiv' class='col-md-6'></div>
 {% set mode = 'edit-template' %}
 {% include 'steps-links-edit.html' %}
 {% include 'json-editor.html' %}
