limit user input to extra fields for certain item types (#3989)
* hide body in view/edit mode if set in metadata
via {"elabftw": { "display_main_text: false }}
in show mode load/show metadata instead of body

* add namespace, positive key(option) name

* use metadata enum for now
This will need to be replaced with a proper json validator in the next metadata version

* use Metadata::ExtraFields

* fix md editor, simplify syntax, use hidden

Co-authored-by: Nicolas CARPi <nico-git@deltablot.email>

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -174,15 +174,18 @@
 
   <!-- BODY -->
   {% if editor == 'md' %}
-  <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'>{{ Entity.entityData.body }}</textarea>
+  <div {{ not displayMainText ? 'hidden' }}>
+    <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'>{{ Entity.entityData.body }}</textarea>
+  </div>
   {% else %}
-  <div><!-- << this div is added around the textarea to fix an issue on mobile editor. See #3107 -->
+  {# do not display body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
+  <div {{ not displayMainText ? 'hidden' }}>{# << this div is added around the textarea to fix an issue on mobile editor. See #3107 #}
     <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='mceditable invisible' name='body' rows='15' cols='80'>{{ Entity.entityData.body }}</textarea>
   </div>
   {% endif %}
 
   <div class='mt-4 text-center'>
-    <button data-action='update-entity-body' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+    <button {{ not displayMainText ? 'hidden' }} data-action='update-entity-body' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
     <button data-action='update-entity-body' data-redirect='view' class='button btn btn-primary'>{{ 'Save and go back'|trans }}</button>
   </div>
 
