--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -122,29 +122,15 @@
       </fieldset>
     </div>
 
-    <div class='col-md-3 mb-2 form-inline'>
+    <div class='d-flex align-items-start justify-content-around col-md-6'>
       <!-- CAN READ -->
-      <i class='fas fa-fw fa-eye' title='Visibility'></i>
-      <label for='canread_select'>{{ 'Visibility'|trans }}</label>
-      <select id='canread_select' class='permissionSelect form-control' data-rw='canread'>
-        {% for key, value in visibilityArr %}
-          <option value='{{ key }}'
-          {{ Entity.entityData.canread == key ? ' selected' }}
-          >{{ value|trans }}</option>
-        {% endfor %}
-      </select>
-    </div>
-    <div class='col-md-3 mb-2 form-inline'>
+      {% set rw = 'canread' %}
+      {% set can = Entity.entityData.canread|canToHuman %}
+      {% include('view-permissions.html') %}
       <!-- CAN WRITE -->
-      <i class='fas fa-fw fa-pencil-alt' title='Can write'></i>
-      <label for='canwrite_select'>{{ 'Can write'|trans }}</label>
-      <select id='canwrite_select' class='permissionSelect form-control' data-rw='canwrite'>
-        {% for key, value in visibilityArr %}
-          <option value='{{ key }}'
-          {{ Entity.entityData.canwrite == key ? ' selected' }}
-          >{{ value|trans }}</option>
-        {% endfor %}
-      </select>
+      {% set rw = 'canwrite' %}
+      {% set can = Entity.entityData.canwrite|canToHuman %}
+      {% include('view-permissions.html') %}
     </div>
   </div>
 
