--- a/src/templates/pdf.html
+++ b/src/templates/pdf.html
@@ -34,8 +34,6 @@
         {% endfor %}<br>
       {% endif %}
       <strong>{{ 'Created by'|trans }}:</strong> {{ entityData.fullname }}<br>
-      <strong>{{ 'Visibility'|trans }}:</strong> {{ canread }}<br>
-      <strong>{{ 'Can write'|trans }}:</strong> {{ canwrite }}
     </p>
   </div>
 
@@ -146,8 +144,8 @@
 </div>
 
 {% if includeChangelog %}
-  <h3>{{ 'Changelog'|trans }}</h3>
-  <table class='table'>
+  <h3 id='changelogHeader'>{{ 'Changelog'|trans }}</h3>
+  <table class='table' aria-labelledby='changelogHeader'>
     <thead>
       <tr>
           <th>{{ 'Date'|trans }}</th>
