--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -1,9 +1,12 @@
 <!-- JSON EDITOR -->
-<!-- json metadata is preloaded for templates -->
+{% include('field-builder-modal.html') %}
+
 <section class='box' id='json-editor'>
   <h3 data-action='toggle-next' data-icon='jsonEditorIcon' class='d-inline'><i id='jsonEditorIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-list'></i> {{ 'JSON Editor'|trans }}</h3>
   <div id='jsonEditorDiv' class='mt-2' hidden data-save-hidden='jsonEditorDiv'>
-    <button type='button' id='jsonEditorMetadataLoadButton' data-action='json-load-metadata' class='btn btn-neutral mb-2'>{{ 'Load metadata'|trans }}</button> <button type='button' data-action='json-clear' class='btn btn-danger mb-2'>{{ 'Clear'|trans }}</button>
+    <button type='button' id='jsonEditorMetadataLoadButton' data-action='json-load-metadata' class='btn btn-neutral mb-2'>{{ 'Load metadata'|trans }}</button>
+    <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' id='jsonEditorAddFieldButton' class='btn btn-primary mb-2'>{{ 'Add field'|trans }}</button>
+    <button type='button' data-action='json-clear' class='btn btn-danger mb-2'>{{ 'Clear'|trans }}</button>
     <span data-action='toggle-next'><i class='fas fa-fw fa-info-circle'></i></span><span hidden><a target='_blank' href='https://doc.elabftw.net/metadata.html'>{{ 'See documentation about extra fields.'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></span>
     <h6 id='jsonEditorTitle'></h6>
     <div id='jsonEditorContainer' data-preload-json='1'></div>
